feat/refactor: saving the order of the locations since hashmap doesn't save in the order of addition;